Stop the logo from being stretched and add a background color

--- a/app/assets/stylesheets/camaleon_cms/admin/_custom_admin.css.scss
+++ b/app/assets/stylesheets/camaleon_cms/admin/_custom_admin.css.scss
@@ -722,3 +722,16 @@ $bg-billboard: #222B5A;
   
   }
 }
+
+
+// Login Screen - Logo
+.login-logo {
+  background: #2E6788;
+  padding: 3rem;
+  margin: 0;
+  img {
+    height: auto;
+    width: 300px;
+  }
+}
+
